# indexing

pkg/mmap/: configure  configure.in
pkg/mmap/R/: mmap.R
pkg/mmap/src/: config.h  config.h.in  mmap.c  mmap.h
pkg/mmap/tests/: endiantest.R
pkg/mmap/tests/tools/: endiantest_gen.py
